--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ permalink:           pretty
 # Setup
 title:               Progress
 tagline:             A responsive blog theme that illustrates reading progress. Suited for continous reading.
-url:                 http://alexanderussell.github.io
-baseurl:             /progress-for-jekyll
+url:                 http://bymyself-yoon.github.io
+baseurl:             /
 analytics_id:
 
 # Owner/author information
